--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -8,7 +8,6 @@
 
 {% block main_content %}
 <form action="" id="new-redirect-form">
-{{ form.csrf_token }}
   <div class="row">
     <div class="large-6 columns">
       <label>From Path
@@ -54,7 +53,10 @@
   </div>
 </div>
 
+  <script src="{{ url_for('static', filename='csrf-activator.js') }}"></script>
   <script type="text/javascript">
+    var csrftoken = "{{ csrf_token() }}";
+    activateCSRF(csrftoken);
 
   function updateTable(data){
       $("#redirects-table").html(data);
