Changed a dept-chair tag to be program-director tag. must have been a typo

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -760,7 +760,7 @@ to be in it's own card div, something to think about in the future -->
                 <div id="program-director-div1" class="hide-when-school-changes1"><label>
                     Are you the Program Director?
                     <div class="radio">
-                        <label><input type="radio" name="dept-chair1" value="Yes">Yes</label>
+                        <label><input type="radio" name="program-director1" value="Yes">Yes</label>
                     </div>
                     <div class="radio">
                         <label><input type="radio" name="program-director1" value="No">No</label>
